# ditto-scrapper

./: .gitignore  DEPLOYMENT.md  README.md  extract_article.py  main.py  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_app.py
.streamlit/: config.toml
src/: __init__.py  scraper.py
