[tool.poetry]
name = "ditto-scrapper"
version = "0.1.0"
description = "POC para scrappear theobjetive"
authors = ["Andoni Rodriguez <andoni.rodriguez@nc43tech.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
lxml = "^6.0.0"
streamlit = "^1.47.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 